add remote paging, sorting, read, update

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <!-- endbuild -->
   </head>
   <body ng-controller="AppController">
-        <excel-table tbl-option="tblOption" model="tblModel" data="tblData" data-primary="id" row-editing></excel-table>
+        <excel-table class="xtable" tbl-option="tblOption" model="tblModel" data="tblData" data-primary="id" row-editing></excel-table>
   		<!-- <excel-table tbl-option="tblOption" model="tblModel" data="tblData1" row-editing></excel-table> -->
   		
     	<!-- <div class="excel-table">
