--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
     <!-- endbuild -->
   </head>
   <body ng-controller="AppController">
-        <excel-table class="xtable" tbl-option="tblOption" model="tblModel" data="tblData" data-primary="id" row-editing></excel-table>
-  		
+        <excel-table data-id="1" class="xtable" tbl-option="tblOption" model="tblModel" data="tblData" data-primary="id" row-editing></excel-table>
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
